--- a/index.html
+++ b/index.html
@@ -23,8 +23,7 @@
         <!-- page about start -->
         <div data-role="page" id="p_exocard">
             <div data-role="header" data-position="fixed" data-tap-toggle="false">
-                <a href="#nav-panel" id="nav-panel" data-icon="carat-l" data-iconpos="notext">Menu</a>
-                <h1>幸福紅茶冰</h1>
+                <h1>服務集點認證</h1>
             </div>
             <div role="main" class="ui-content">
                 <img src="img/bg.jpg" />
